@@ -13,6 +13,8 @@ git-annex (6.20160528) UNRELEASED; urgency=medium
     when used with git 2.9, which has stopped doing this itself.
   * Automatically enable v6 mode when initializing in a clone from a repo
     that has an adjusted branch checked out.
+  * Fix initialization of a bare clone of a repo that has an adjusted
+    branch checked out.
   * remotedaemon: Fixed support for notifications of changes to gcrypt
     remotes, which was never tested and didn't quite work before.
 
